--- a/src/components/main-page/groups-managing/group-managing.css
+++ b/src/components/main-page/groups-managing/group-managing.css
@@ -4,6 +4,33 @@
     background-color: #f5f5f5;
 }
 
+/*.group-table {*/
+/*    overflow-x: auto; !* Горизонтальная прокрутка *!*/
+/*    max-width: 100%; !* Ограничение ширины до ширины контейнера *!*/
+/*}*/
+
+/*table {*/
+/*    width: 100%; !* Таблица займет всю ширину контейнера *!*/
+/*    border-collapse: collapse; !* Убирает промежутки между ячейками *!*/
+/*}*/
+
+.group-table-div{
+    position: relative;
+    overflow-x: auto;
+    width: 100%;
+    max-width: 100%;
+}
+
+table {
+    width: 100%;
+    max-width: 100%;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 1rem;
+    border: 1px solid #eee;
+}
 h1 {
     color: #333;
     text-align: center;
@@ -99,4 +126,59 @@ input[type="number"]::placeholder {
     margin: 0 10px;
     font-size: 16px;
     color: #333;
+}
+
+.filter-form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 15px;
+    margin-bottom: 20px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.filter-form input,
+.filter-form select {
+    flex: 1 1 calc(25% - 20px); /* Автоматическое масштабирование */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    box-sizing: border-box; /* Учитывает паддинги и границы */
+}
+
+.filter-form input[type="date"],
+.filter-form input[type="number"] {
+    max-width: 200px;
+}
+
+.filter-form label {
+    font-size: 14px;
+    font-weight: bold;
+    color: #555;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.filter-form button {
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    align-self: flex-start; /* Располагает кнопку по верхнему краю */
+}
+
+.filter-form button:hover {
+    background-color: #218838;
+}
+
+.filter-form button:active {
+    background-color: #1e7e34;
 }
